--- a/index.html
+++ b/index.html
@@ -75,12 +75,9 @@
     }
     .project .media img,
     .project .media video{
-      display:block; width:100%; height:auto; object-fit:cover;
+      display:block; width:100%; height:auto; aspect-ratio: 16/9; object-fit:cover;
       transition: transform .6s cubic-bezier(.22,.61,.36,1), opacity .3s ease;
     }
-    /* keep videos 16:9, give images a slightly taller 3:2 so they fill nicely */
-    .project .media video{ aspect-ratio:16/9; }
-    .project .media img{ aspect-ratio:3/2; }
     .project .media:hover img,
     .project .media:hover video{ transform: scale(1.02); }
     .project p{font-size:16px; line-height:1.75; color:#111827; margin:14px 2px 0;}
@@ -89,21 +86,6 @@
       padding:10px 14px; border-radius:10px; border:1px solid #e5e7eb; color:#0f172a; background:#fff; margin-left:8px;
     }
     .btn:hover{background:#f8fafc}
-
-    /* Minimal gallery arrows (images only) */
-    .ctrl{
-      position:absolute; top:50%; transform:translateY(-50%);
-      width:40px; height:40px; border-radius:999px; border:1px solid rgba(15,23,42,.12);
-      background:rgba(255,255,255,.96); display:grid; place-items:center;
-      box-shadow:0 8px 18px rgba(17,19,24,.18);
-      cursor:pointer; opacity:0; transition:opacity .2s ease, transform .2s ease;
-      user-select:none;
-    }
-    .media:hover .ctrl{opacity:1}
-    .ctrl:disabled{opacity:.35; cursor:not-allowed}
-    .ctrl.prev{left:10px}
-    .ctrl.next{right:10px}
-    .ctrl svg{width:20px;height:20px}
 
     /* ===== Footer ===== */
     footer{padding:36px 0 60px;color:#94a3b8;font-size:14px}
@@ -311,26 +293,24 @@
         </p>
       </article>
 
-      <!-- Quokka (clickable image -> deck) -->
+      <!-- Quokka -->
       <article class="project" id="quokka">
         <h3>Quokka Brew — Can Design Research &amp; Iterations</h3>
-        <a class="media" href="Projects/Quokka%20Brew.pdf" target="_blank" rel="noopener"
-           data-images="Projects/EY1.JPG,Projects/EY2.JPG,Projects/EY3.JPG,Projects/EY4.JPG">
+        <div class="media">
+          <!-- Swap this to your actual Quokka hero image if you have one -->
           <img src="Projects/EY1.JPG" alt="Quokka Brew research hero" />
-          <!-- arrows will be injected by JS -->
-        </a>
+        </div>
         <p>
           We ran <b>60+ interviews</b> then tested concepts with the <b>10-ft / 5-ft / 1-ft rule</b>. Signal was clear: calmer neutrals read more “coffee,” the logo and health callouts need to read at 5 ft, and flavor cues should be dead simple at 1 ft. We benchmarked against Rise, La Colombe, and Starbucks and turned that into <b>3 MVP layouts</b> plus variants the team could keep testing. My role was pulling the insights and pushing changes that actually show up on the can — bigger mark, clean info bands, and a flavor hierarchy you can catch fast. <a class="btn" href="Projects/Quokka%20Brew.pdf" target="_blank" rel="noopener">Open deck</a>
         </p>
       </article>
 
-      <!-- Clear Clinical (clickable image -> mid deck) -->
+      <!-- Clear Clinical -->
       <article class="project" id="clear-clinical">
         <h3>Clear Clinical — Product Strategy &amp; UX</h3>
-        <a class="media" href="Projects/MID%20SEMSESTER%20DELIVERABLE%20CLEAR%20CLINICAL.pdf" target="_blank" rel="noopener"
-           data-images="Projects/Magazine1.JPG,Projects/Magazine2.JPG,Projects/Magazine3.JPG">
+        <div class="media">
           <img src="Projects/Magazine1.JPG" alt="Clear Clinical deck preview" />
-        </a>
+        </div>
         <p>
           Semester project focused on adoption. Interviews + competitive scan → a staged roadmap: nail the daily workflows first, then layer advanced features once the base is sticky. I framed trade-offs and laid out the first shippable version so a small team could move.
           <a class="btn" href="Projects/MID%20SEMSESTER%20DELIVERABLE%20CLEAR%20CLINICAL.pdf" target="_blank" rel="noopener">Mid deck</a>
@@ -341,7 +321,7 @@
       <!-- EY Workshop -->
       <article class="project" id="ey-workshop">
         <h3>EY Workshop — Design Thinking</h3>
-        <div class="media" data-images="Projects/EY2.JPG,Projects/EY3.JPG,Projects/EY4.JPG">
+        <div class="media">
           <img src="Projects/EY2.JPG" alt="EY workshop — design thinking session" />
         </div>
         <p>
@@ -352,7 +332,7 @@
       <!-- Advocacy Day -->
       <article class="project" id="advocacy-day">
         <h3>Policy Advocacy Day — Sacramento</h3>
-        <div class="media" data-images="Projects/Partnership_Advocacy_Day1.JPG,Projects/Partnership_Advocacy_Day2.JPG">
+        <div class="media">
           <img src="Projects/Partnership_Advocacy_Day1.JPG" alt="Policy Advocacy Day — Sacramento" />
         </div>
         <p>
@@ -363,7 +343,7 @@
       <!-- Magazine -->
       <article class="project" id="magazine">
         <h3>Magazine Feature</h3>
-        <div class="media" data-images="Projects/Magazine2.JPG,Projects/Magazine1.JPG,Projects/Magazine3.JPG">
+        <div class="media">
           <img src="Projects/Magazine2.JPG" alt="Magazine feature" />
         </div>
         <p>
@@ -380,54 +360,7 @@
 
   <script>
     document.getElementById('y').textContent = new Date().getFullYear();
-
-    // Minimal image gallery arrows (does not touch videos)
-    const LEFT = 'M15 18l-6-6 6-6';
-    const RIGHT = 'M9 6l6 6-6 6';
-
-    document.querySelectorAll('.project .media').forEach(media => {
-      const img = media.querySelector('img');
-      if(!img) return; // only for image galleries
-
-      // Build source list from data-images, fallback to current src
-      let sources = (media.dataset.images || '')
-        .split(',').map(s=>s.trim()).filter(Boolean);
-      if(!sources.length) sources = [img.getAttribute('src')];
-
-      // Create arrows
-      const prev = document.createElement('button');
-      prev.className = 'ctrl prev';
-      prev.innerHTML = `<svg viewBox="0 0 24 24" fill="none"><path d="${LEFT}" stroke="#111827" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>`;
-      const next = document.createElement('button');
-      next.className = 'ctrl next';
-      next.innerHTML = `<svg viewBox="0 0 24 24" fill="none"><path d="${RIGHT}" stroke="#111827" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>`;
-
-      media.appendChild(prev);
-      media.appendChild(next);
-      media.tabIndex = 0; // keyboard focus
-      let i = 0;
-
-      function update(){
-        img.src = sources[i];
-        prev.disabled = (i===0);
-        next.disabled = (i===sources.length-1);
-        // Hide arrows entirely if there's only one image
-        prev.style.display = next.style.display = (sources.length>1) ? 'grid' : 'none';
-      }
-      function go(delta){
-        i = Math.max(0, Math.min(sources.length-1, i+delta));
-        update();
-      }
-
-      prev.addEventListener('click', e => { e.stopPropagation(); go(-1); });
-      next.addEventListener('click', e => { e.stopPropagation(); go(1); });
-      media.addEventListener('keydown', e => {
-        if(e.key === 'ArrowLeft'){ e.preventDefault(); go(-1); }
-        if(e.key === 'ArrowRight'){ e.preventDefault(); go(1); }
-      });
-
-      update();
-    });
   </script>
 </body>
 </html>
+
